--- a/css/style.css
+++ b/css/style.css
@@ -847,6 +847,52 @@ img {
 	opacity: 1;
 }
 
+ .item {
+            display: inline-block;
+            vertical-align: top;
+            float: left;
+            width: 220px;
+            min-height: 316px;
+            border: 1px solid #e5e5e5;
+            font-size: 0;
+            margin: 0;
+            padding: 0;
+            margin-right: 20px;
+            text-align: center;
+            box-sizing: border-box;
+            padding-bottom: 21px;
+        }
+
+        .item:last-child {
+            margin-right: 0;
+        }
+
+        .catalog .item:nth-child(3n+4) {
+            margin-right: 0;
+        }
+
+        .catalog .item {
+            margin-top: 20px;
+        }
+
+            .actions {
+                display: none;
+                width: 220px;
+                padding: 43px 0;
+            }
+
+            .item:hover {
+                box-shadow: 0 10px 23px 0px rgba(41,52,73,0.5);
+            }
+
+            .item:hover .actions {
+                display: block;
+            } 
+
+            .item:hover .item-image,
+            .item:hover .item-image img {
+                display: none;
+            } 
 
 /*promo*/
 
@@ -1241,16 +1287,16 @@ img {
 }
 /*services/////////////////////////////*/
 
-.section-services
-
-{
-
+.section-services,
+.catalog-information {
 
 	padding-top: 67px;
 	background-color: #f2f6f8;
 }
 
-
+.catalog-information {
+    padding-bottom: 67px;
+}
 .section-title  {
 	width: 540px;
 	font-size: 30px;
