--- a/css/style.css
+++ b/css/style.css
@@ -359,8 +359,15 @@ img {
 	
 		opacity: 1;
 }
-
-
+.icon-user {
+position: relative;
+    left: -25px;
+  }
+  .icon-logout {
+      position: relative;
+    right: 10px;
+    bottom: 2px;
+}
 
 .user-block .registration {
 	width: 100px;
@@ -637,11 +644,11 @@ img {
 }
 
 .min-toggle {
-	left: 70px;
+	left: 25px;
 }
 
 .max-toggle {
-	left: 165px;
+	left: 155px;
 }
 
 .price-controls {
@@ -1261,7 +1268,8 @@ button[type="button"],
 
 .catalog-items {
 	float: left;
-	font-size: 0;          
+	font-size: 0; 
+	margin-top: 20px;         
 }
 
 .catalog-item {
@@ -1271,18 +1279,24 @@ button[type="button"],
 	display: inline-block;
 	vertical-align: top;
 	width: 218px;
-	margin-right: 20px;
+	margin-right: 16px;
 	margin-bottom: 20px;
 	text-align: center;
 	border: 1px solid #ccc;
 }
 
-.catalog-items .catalog-item:nth-child(3n+4){
+ .catalog-item:nth-child(4n){
 	margin-right: 0;
 
 }
-.catalog .catalog-item:nth-child(3n+1){
-margin-right: 0;
+
+.shop .catalog-item {
+  margin-right:20px;
+}
+
+ .shop .catalog-item:nth-child(3n){
+	margin-right: 0;
+
 }
 
 .catalog-item .actions {
