--- a/css/style.css
+++ b/css/style.css
@@ -325,7 +325,7 @@ img {
     background-color: #f1f5f7;
 }
 
-.header-text p {
+.header-text  {
     width: 200px;
     float: left;
     font-size: 16px;
@@ -334,7 +334,8 @@ img {
     font-weight: normal;
     font-style: italic;
     margin-left: 50px;
-    padding-bottom: 45px;
+    padding-top: 10px;
+    margin-bottom: 30px;
 }
 
 .header-contacts {
@@ -364,12 +365,13 @@ img {
     height: 19px;
     top: 10px;
     left: 15px;
+   color:#b7bfc8;
 }
 
 .header-contacts p {
     margin-left: 70px;
     font-size: 14px;
-    line-height: 20px;
+    line-height: 24px;
     color: #32425c;
     font-weight: normal;
     text-align: center;
@@ -1068,7 +1070,7 @@ a.arrow-down:active::after {
 .paginator {
     list-style: none;
     padding: 0;
-    margin: 45px 0 0 00;
+    margin: 25px 0 0 00;
     font-size: 0;
 }
 .paginator li{
@@ -1111,7 +1113,7 @@ a.arrow-down:active::after {
 
 .promo-content {
     margin-top: 60px;
-    margin-bottom: 35px;
+    margin-bottom: 30px;
 }
 
 .promo {
@@ -1406,10 +1408,10 @@ a.arrow-down:active::after {
 }
 
 .section-header {
-    padding-top: 30px;
-    padding-right: 30px;
-    padding-bottom: 27px;
-    padding-left: 29px;
+    padding-top: 27px;
+    padding-right: 24px;
+    padding-bottom: 25px;
+    padding-left: 25px;
     background-color: #f7f3ec;
 }
 
@@ -1638,8 +1640,8 @@ a.arrow-down:active::after {
 
 .section-services,
 .catalog-information {
-    margin-top: 55px;
-    padding-top: 17px;
+    margin-top: 60px;
+    padding-top: 30px;
     background-color: #f2f6f8;
 }
 
@@ -1663,6 +1665,9 @@ a.arrow-down:active::after {
     color: #000;
     font-weight: normal;
     font-family: "PT Sans";
+}
+.contacts img {
+ cursor: pointer;
 }
 
 .section-services .section-text {
@@ -1794,6 +1799,7 @@ input[type="radio"] {
 
 .services-slider-controls label:hover {
     background-color: #293449;
+     cursor: pointer;
 }
 
 #delivery-btn:checked ~ .services-slider-controls label[for="delivery-btn"], 
@@ -1828,7 +1834,7 @@ input[type="radio"] {
 /*---------about-us----------*/
 
 .about-us {
-    padding-top: 82px;
+    padding-top: 60px;
     padding-bottom: 86px;
 }
 
@@ -1845,16 +1851,16 @@ input[type="radio"] {
     list-style: none;
     padding: 0;
     margin: 0;
-    padding-bottom: 30px;
+    padding-bottom: 10px;
     margin-top: 25px;
 }
 
 .about-us .section-text {
-    margin-top: 35px;
+    margin-top: 25px;
 }
 
 .about-us .section-title {
-    margin-bottom: 35px;
+    margin-bottom: 25px;
 }
 
 .section-list li {
@@ -1883,9 +1889,6 @@ input[type="radio"] {
 
 .contacts .btn {
     display: block;
-    padding: 14px 0px;
-    padding-left: 67px;
-    padding-right: 68px;
 }
 
 .contacts {
@@ -1897,7 +1900,7 @@ input[type="radio"] {
     width: 300px;
     height: 158px;
     margin-top: 35px;
-    padding-bottom: 45px;
+    padding-bottom: 20px;
 }
 
 /*----FOOTER----*/
@@ -1969,7 +1972,7 @@ input[type="radio"] {
     font-size: 0;
     clear: both;
     float: right;
-    margin-bottom: 40px;
+    margin-bottom: 35px;
 }
 
 .footer-nav li {
@@ -1977,7 +1980,7 @@ input[type="radio"] {
     vertical-align: top;
     padding: 0;
     margin: 0;
-    margin-left: 55px;
+    margin-left: 60px;
 }
 
 .footer-nav li:first-child {
@@ -2018,7 +2021,7 @@ input[type="radio"] {
     vertical-align: top;
     padding: 0;
     margin: 0;
-    margin-left: 55px;
+    margin-left: 60px;
 }
 
 .footer-catalog li:first-child {
@@ -2060,7 +2063,7 @@ input[type="radio"] {
     font-size: 0;
     vertical-align: top;
     text-decoration: none;
-    margin-left: 60px;
+    margin-left: 50px;
 }
 
 .icon-vk,
